--- a/index.html
+++ b/index.html
@@ -64,6 +64,28 @@
                 <button class="submit">Enviar</button>
             </div>
         </form>
+        <div class="containGeneralSub">
+            <div class="containEmail">
+                <img src="img/enviar-correo 1.png" alt="enviar-correo">
+                <p class="textSubcr">Suscríbete para más novedades</p>
+            </div>
+            <div class="containEmailTwo">
+                <label for="emailSub"></label>
+                <input type="email" id="emailSub" placeholder="Ingresá tu correo electrónico" required>
+                <button class="buttoSub">Suscribirme</button>
+            </div>
+        </div>
+        <footer>
+            <div>
+                <img class="logoTwo" src="img/Logo2.png" alt="logo2">
+            </div>
+            <div class="information">
+                <img src="img/Location.png" alt="location">
+                <img src="img/Phone.png" alt="Phone">
+                <img src="img/Correo.png" alt="Correo">
+            </div>
+
+        </footer>
     </main>
     <script src="code.js"></script>
 </body>
